# fg

client/: .env.example  Cargo.toml
client/extra_datas/: README.md  game_rules.json
client/src/: extra_data.rs  main.rs
client/src/models/: common.rs  dto.rs  exports.rs  messages.rs  mod.rs  state.rs
client/src/parser/: mod.rs  rules.rs  task_parser.rs  task_watch.rs
